2006-04-23  Mickael Remond  <mickael.remond@process-one.net>

	* src/msgs/fr.msg: Updated
	* src/msgs/de.msg: Updated (thanks to Nikolaus Polak)

2006-04-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pt-br.msg: Updated (thanks to Lucius Curado)

	* src/xml_stream.erl: Support for stanza size limit (thanks to
	Igor Goryachev)
	* src/ejabberd_receiver.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_s2s_in.erl: Likewise
	* src/ejabberd.cfg.example: Updated

	* src/ejabberd_auth.erl: Fixed try_register/3 behaviour

2006-04-20  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd.cfg.example: Update of the example for anonymous.
	Removed unnecessary parameter.
	* src/ejabberd_auth_anonymous.erl: Removed unnecessary parameter /
	bugfix.
	* src/ejabberd_auth.erl: Bugfix: We now are forced to check is an
	anonymous user is log under a given user name before trying to
	register it.
	* doc/guide.tex: Updated (SASL anonymous and anonymous login).

2006-04-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/pl.msg: Updated (thanks to Andrzej Smyk)

2006-04-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/xml_stream.erl: Cleanup

	* src/ejabberd_service.erl: Updated to use ejabberd_receiver

2006-04-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Minor fix

	* src/ejabberd_c2s.erl: Bugfix (thanks to Sergei Golovan)

	* doc/guide.tex: Updated (thanks to Sergei Golovan)

	* src/msgs/nl.msg: Updated (thanks to Sander Devrieze)

2006-04-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/es.msg: Updated (thanks to Badlop)

	* src/ejabberd.cfg.example: Updated (thanks to Badlop)

	* doc/guide.tex: Updated (thanks to Badlop)

2006-04-07  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Fixed pubsub root node creation
	(conflict error was send on node creation)

2006-04-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl: SASL Anonymous + Anonymous login support